@startuml
skinparam classAttributeIconSize 0
hide circle
left to right direction

class Plataforma {
  - nome: String
  --
  + cadastrarUsuario(usuario: Usuario): boolean
  + cadastrarMusica(musica: Musica): boolean
  + buscarMusicaPorId(id: int): Musica
  + buscarUsuario(nome: String): Usuario
}

class Usuario {
  - id: int
  - nome: String
  - email: String
  --
  + seguir(outro: Usuario): void
  + deixarDeSeguir(outro: Usuario): void
  + getQuantidadeSeguindo(): int
}

class Playlist {
  - nome: String
  --
  + adicionar(musica: Musica): boolean
  + getDuracaoTotalSegundos(): int
  + reproduzirTudo(): void
}

class Musica {
  - id: int
  - titulo: String
  - artista: String
  - duracaoSegundos: int
  - reproducoes: int
  --
  + reproduzir(): void
}

Plataforma "1" --> "0..*" Musica : plataforma / cataloga / acervo
Plataforma "1" --> "0..*" Usuario : plataforma / registra / usuarios
Playlist "0..*" --> "1" Usuario : playlists / pertence a / dono
Playlist "0..*" --> "0..*" Musica : playlists / contem / faixas
Usuario "0..*" --> "0..*" Usuario : seguindo / segue / seguidores

@enduml